--- a/content/themes/Saga-master/post.hbs
+++ b/content/themes/Saga-master/post.hbs
@@ -5,6 +5,7 @@
             {{>header-navigation}}
         </section>
         <section id="hero" class="hero post-meta">
+            <div class="hc-toc"></div>
             <div class="hero-content">
                 <h1 id="{{id}}-title" class="post-title animated fadeInUp delay-1">{{{title}}}</h1>
                 <div class="post-data">
