--- a/content/themes/Saga-master/default.hbs
+++ b/content/themes/Saga-master/default.hbs
@@ -20,6 +20,19 @@
         {{> footer}}
     </footer>
     <script type="text/javascript" src="{{asset 'js/Saga.js'}}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.11.1/tocbot.min.js"></script>
+    <script>
+        tocbot.init({
+        // Where to render the table of contents.
+        tocSelector: '.js-toc',
+        // Where to grab the headings to build the table of contents.
+        contentSelector: '.js-toc-content',
+        // Which headings to grab inside of the contentSelector element.
+        headingSelector: 'h1, h2, h3',
+        // For headings inside relative or absolute positioned containers within content.
+        hasInnerContainers: true,
+        });
+    </script>
     {{ghost_foot}}
 </body>
 </html>
