--- a/content/themes/Saga-master/default.hbs
+++ b/content/themes/Saga-master/default.hbs
@@ -9,6 +9,19 @@
     <title>{{meta_title}}</title>
     <link href="{{asset 'css/style.min.css'}}" rel="stylesheet" type="text/css">
     <link href="{{asset 'favicon.ico'}}" rel="shortcut icon">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tocbot/4.11.1/tocbot.min.js"></script>
+    <script>
+        tocbot.init({
+        // Where to render the table of contents.
+        tocSelector: '.js-toc',
+        // Where to grab the headings to build the table of contents.
+        contentSelector: '.js-toc-content',
+        // Which headings to grab inside of the contentSelector element.
+        headingSelector: 'h1, h2, h3',
+        // For headings inside relative or absolute positioned containers within content.
+        hasInnerContainers: true,
+        });
+    </script>
     {{ghost_head}}
     <meta name="theme" content="Saga v2.1.3">
 </head>
