--- a/content/themes/liebling/post.hbs
+++ b/content/themes/liebling/post.hbs
@@ -1,4 +1,4 @@
-{{!--
+feature_image{{!--
 This template is used for the post page.
 --}}
 
@@ -31,6 +31,7 @@ into the {body} of the default.hbs template --}}
   
   <article>
     <div class="l-content in-post">
+      <div class="hc-toc"></div>
       {{!-- Everything inside the #post tags pulls data from the post --}}
       {{#post}}
         <div class="l-wrapper in-post {{#unless feature_image}}no-image{{/unless}} js-aos-wrapper" data-aos="fade-up"
