--- a/content/themes/liebling/post.hbs
+++ b/content/themes/liebling/post.hbs
@@ -31,7 +31,7 @@ into the {body} of the default.hbs template --}}
   
   <article>
     <div class="l-content in-post">
-      <div class="hc-toc"></div>
+      <div class="js-toc"></div>
       {{!-- Everything inside the #post tags pulls data from the post --}}
       {{#post}}
         <div class="l-wrapper in-post {{#unless feature_image}}no-image{{/unless}} js-aos-wrapper" data-aos="fade-up"
