--- a/content/themes/casper/default.hbs
+++ b/content/themes/casper/default.hbs
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <script async src="https://cse.google.com/cse.js?cx=410cdf592156f5958"></script>
     {{!-- Theme assets - use the {asset} helper to reference styles & scripts,
     this will take care of caching and cache-busting automatically --}}
     <link rel="stylesheet" type="text/css" href="{{asset "built/screen.css"}}" />
@@ -43,6 +43,8 @@
             </div>
             <div class="gh-head-actions">
                 <div class="gh-social">
+                    
+                    <div class="gcse-search"></div>
                     {{#if @site.facebook}}
                         <a class="gh-social-facebook" href="{{facebook_url @site.facebook}}" title="Facebook" target="_blank" rel="noopener">{{> "icons/facebook"}}</a>
                     {{/if}}
